# si-emulator

./: .gitignore  CMakeLists.txt  README.md  cpu.cpp  cpu.h  decoder.cpp  decoder.h  instruction.h  main.cpp  memory.cpp  memory.h
